--- a/dot-NET Vjezbe/Zadatak 06/Zadatak 06.csproj
+++ b/dot-NET Vjezbe/Zadatak 06/Zadatak 06.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{601E31B5-72B2-45A7-96C4-5A902E152DD2}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
