--- a/dot-NET Vjezbe/Zadatak 07/Zadatak 07.csproj
+++ b/dot-NET Vjezbe/Zadatak 07/Zadatak 07.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{601e31b5-72b2-45a7-96c4-5a902e152dd2}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
